# ACS_crawler

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DOCKER.md  Dockerfile  LIMITATIONS.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
.claude/: settings.local.json
.github/workflows/: docker-publish.yml
data/: acs_papers.db.backup
docs/: README.md  conf.py  requirements.txt
docs/source/: conf.py  index.rst  index.rst.backup
docs/source/en/: api.rst  api_usage.rst  architecture.rst  contributing.rst  installation.rst  license.rst  quickstart.rst  troubleshooting.rst  usage.rst  web_usage.rst
docs/source/zh/: api.rst  api_usage.rst  architecture.rst  contributing.rst  installation.rst  license.rst  quickstart.rst  troubleshooting.rst  usage.rst  web_usage.rst
software-copyright/: 1-introduction.tex  2-installation.tex  3-usage.tex  code_simplified.tex  document.tex  prompts.md  settings.tex  source-code.tex
src/acs_crawler/: README.md  __init__.py  config.py
src/acs_crawler/api/: README.md  main.py
src/acs_crawler/api/templates/: index.html  paper_detail.html  papers.html
src/acs_crawler/models/: paper.py
src/acs_crawler/scrapers/: paper_scraper.py
src/acs_crawler/storage/: sqlite_storage.py
tests/: test_docker_simple.sh
